--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -60,17 +60,20 @@
                 app:layout_constraintTop_toBottomOf="@id/titleText"
                 app:layout_constraintStart_toStartOf="parent">
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/taxi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:checked="true"
                     android:text="택시"></com.google.android.material.chip.Chip>
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/product"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:text="공동구매"></com.google.android.material.chip.Chip>
                 <com.google.android.material.chip.Chip
+                    android:id="@+id/delivery"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
@@ -99,6 +102,7 @@
                 android:id="@+id/thumbnail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
                 app:layout_constraintTop_toBottomOf="@id/addThumbnail"></ImageView>
 
             <TextView
@@ -106,7 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                app:layout_constraintTop_toBottomOf="@id/addThumbnail"
+                app:layout_constraintTop_toBottomOf="@id/thumbnail"
                 app:layout_constraintStart_toStartOf="parent"
 
                 android:text="입력 사항"
@@ -180,6 +184,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="number"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -204,6 +209,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:inputType="number"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
