--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -131,7 +131,7 @@
 
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="25dp"
-                android:hint="input1"
+                android:hint="출발 장소"
                 app:helperTextEnabled="true"
                 app:helperText="출발 장소를 입력해 주세요">
 
@@ -153,7 +153,7 @@
 
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="25dp"
-                android:hint="input2"
+                android:hint="도착 장소"
                 app:helperTextEnabled="true"
                 app:helperText="도착 장소를 입력해 주세요">
 
@@ -251,24 +251,24 @@
                 android:textColor="@color/black"
                 android:textSize="18dp"></TextView>
 
-            <com.google.android.material.textfield.TextInputLayout
+            <TextView
+                android:id="@+id/inputDate"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginHorizontal="25dp"
+                android:text="터치해서 선택"
+                android:textSize="16dp"
+
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:background="@drawable/rectangle_button"
                 android:layout_marginTop="10dp"
                 app:layout_constraintTop_toBottomOf="@id/maxDate"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="200dp"
-                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
-
-                <AutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="none"
-                    />
-
-        </com.google.android.material.textfield.TextInputLayout>
+                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">
+            </TextView>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
