--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="dark_gray">#5E616A</color>
     <color name="purple_light">#EADDFF</color>
     <color name="pink_light">#FFFBFE</color>
+    <color name="hilight">#E8AA8C</color>
 </resources>
