--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -44,6 +44,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/inputEmail"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -67,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:id="@+id/inputPassword"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -90,9 +92,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:id="@+id/inputPasswordConfirm"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/passwordConfirmText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="입사확인서.pdf 업로드"
+        android:layout_marginTop="19dp"
+        android:background="@drawable/rectangle_button"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textStyle="bold"></TextView>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/registerButton"
