--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
+            android:id="@+id/inputEmail"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -61,6 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:id="@+id/inputPassword"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
