--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -187,13 +187,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/input2"
 
-                android:visibility="invisible"
+                android:visibility="visible"
 
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="25dp"
-                android:hint="input3"
+                android:hint="예상 가격"
                 app:helperTextEnabled="true"
-                app:helperText="도착 장소를 입력해 주세요">
+                app:helperText="예상 운행 요금을 입력해 주세요">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
