--- a/app/src/main/res/layout/activity_roommate_register.xml
+++ b/app/src/main/res/layout/activity_roommate_register.xml
@@ -239,11 +239,34 @@
                 app:layout_constraintTop_toBottomOf="@id/sleepType"
                 app:layout_constraintStart_toStartOf="parent"
 
-                android:text="사자타입: 해뜨는 시각에 기상, 해지는 시간에 취침"
+                android:text="*사자타입: 해뜨는 시각에 기상, 해지는 시간에 취침"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
                 android:textSize="16dp"></TextView>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/patternDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:layout_constraintTop_toBottomOf="@id/introText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="25dp"
+
+                app:helperTextEnabled="true"
+                app:helperText="본인의 생활(수면) 패턴에 대해 간단히 설명해 주세요">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:id="@+id/patternInput"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
