--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -24,6 +24,14 @@
             android:textColor="@color/black"
             android:textStyle="bold">
         </TextView>
+
+        <ImageView
+            android:id="@+id/notification"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right"
+            android:background="@drawable/ic_baseline_notifications_none_24"
+            android:layout_marginRight="20dp"></ImageView>
     </androidx.appcompat.widget.Toolbar>
 
     <ImageView
