--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -164,6 +164,7 @@
         android:layout_marginLeft="25dp"></TextView>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/button"
         android:layout_width="100dp"
         android:layout_height="50dp"
 
