--- a/app/src/main/res/layout/activity_roommate_profile.xml
+++ b/app/src/main/res/layout/activity_roommate_profile.xml
@@ -89,6 +89,7 @@
         android:textStyle="bold"></TextView>
 
     <TextView
+        android:id="@+id/intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="25dp"
