--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -23,6 +23,18 @@
             android:textColor="@color/black"
             android:textStyle="bold">
         </TextView>
+
+        <TextView
+            android:id="@+id/complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="18dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="15dp"
+            android:textColor="@color/black"
+            android:textStyle="bold">
+        </TextView>
     </androidx.appcompat.widget.Toolbar>
     
     <ImageView
