--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -148,6 +148,23 @@
         android:layout_marginTop="5dp"></TextView>
 
     <TextView
+        android:id="@+id/delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="글 삭제"
+
+        android:textSize="16dp"
+        android:textColor="@color/purple_theme"
+        android:gravity="center"
+        android:background="@color/light_gray"
+        android:padding="3dp"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text3"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="10dp"></TextView>
+
+    <TextView
         android:id="@+id/price2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
